<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Challenge</string>
    <string name="banner_ad_unit_id">code admob Banner</string>
    <string name="msg_token_fmt">Message</string>
    <string name="facebook_app_id">801520253539954</string>
    <string name="fb_login_protocol_scheme">fb801520253539954</string>
    <string name="exit_con">Exit confirmation </string>
    <string name="exit">Exit</string>
    <string name="request_email">Problem occur when get your email kindly enter your email</string>
    <string name="ok">OK</string>
    <string name="not_valid_email">Please enter a valid email</string>
    <string name="users">Users that you can play with</string>
    <string name="sign_in_successfully">sign in successfully</string>
    <string name="deos_not_sign_in">does not sign in</string>
    <string name="need_vpn">Maybe you live in Syria so you need VPN</string>
    <string name="email_problem">Problem in your email</string>
    <string name="downlaod_vpn">Download VPN</string>
    <string name="open_vpn">Open VPN</string>
    <string name="bashir_altereh" translatable="false"><u>Bashir Altereh</u></string>
    <string name="email" translatable="false"><u>bashiralterh1998@gmail.com</u></string>
    <string name="number_phone" translatable="false"><u>0954226805</u></string>
    <string name="developer_information">Developer information</string>
    <string name="name_mohammed_bashir_altereh" translatable="false"><fornt color="#000000"><u><b>Name:</b></u> </fornt>Mohammed Bashir Altereh</string>
    <string name="no_enogh_point">You don\'t have enough points</string>
    <string name="new_game">New game</string>
    <string name="resume">Resume</string>
    <string name="play_offline">Play offline</string>
    <string name="play_with_friends">Play with friends</string>
    <string name="cancel">Cancel</string>
    <string name="soon">Soon</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="do_want_play">Do want to play</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="success">Success</string>
    <string name="wait_to_sign_in">Please wait to sign in with facebook</string>

</resources>
