<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/v_data"
    android:background="@color/light_gray"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layoutDirection="ltr"
    >

    <TextView
        android:id="@+id/tv_dev_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_information"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_dev"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dev_info"
        app:placeholderImage="@drawable/ic_bashir_icon"
        app:roundAsCircle="true"
        app:roundedCornerRadius="2dp"
        app:roundingBorderColor="@color/white"
        app:roundingBorderWidth="2dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_dev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_mohammed_bashir_altereh"
            android:textSize="18sp"
            />
        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:id="@+id/iv_call"
                android:src="@drawable/ic_call"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_call"
                app:layout_constraintStart_toEndOf="@id/iv_call"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/blue_link"
                android:text="@string/number_phone"
                android:background="@drawable/back_text"
                android:gravity="center"
                />


        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/iv_facebook"
                android:src="@drawable/ic_facebook"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_facebook"
                app:layout_constraintStart_toEndOf="@id/iv_facebook"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="18sp"
                android:textColor="@color/blue_link"
                android:layout_marginStart="10dp"
                android:text="@string/bashir_altereh"
                android:background="@drawable/back_text"
                android:gravity="center"
                />

        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/iv_gmail"
                android:src="@drawable/ic_gmail"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email"
                app:layout_constraintStart_toEndOf="@id/iv_gmail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="18sp"
                android:textColor="@color/blue_link"
                android:layout_marginStart="10dp"
                android:text="@string/email"
                android:background="@drawable/back_text"
                android:gravity="center"
                />


        </android.support.constraint.ConstraintLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>